--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ name = "anyerr"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "Dynamic error library with rich error wrapping and context support"
 authors = ["Justin Chen oosquare@outlook.com"]
 repository = "https://github.com/oosquare/rsudoku"
